2009-06-13  Paul Smith  <psmith@gnu.org>

	* function.c (string_glob): Rely on multi_glob() to determine
	whether files exist or not.  Remove call to file_exists_p() which
	is not always correct.  Fixes Savannah bug #21231.
	* read.c (multi_glob): Add a new argument EXISTS_ONLY; if true
	then only files that really exist will be returned.
	* dep.h: Add new argument to multi_glob().
	* rule.c (install_pattern_rule): Ditto.
	* read.c (eval): Ditto.
	* main.c (main): Ditto.
	* implicit.c (pattern_search): Ditto.
	* file.c (parse_prereqs): Ditto.
	* default.c (set_default_suffixes): Ditto.

2009-06-09  Paul Smith  <psmith@gnu.org>

	* commands.c (set_file_variables): If always_make_flag is set,
	always add the prereq to $?.  Fixes Savannah bug #17825.

	* remake.c (update_file_1): When rebuilding deps of FILE, also try
	to rebuild the deps of all the also_make targets for that file.
	Fixes Savannah bug #19108.

	* implicit.c (pattern_search): Undo test for is_target, added by
	BorisK on 21 Sep 2004.  This goes against step 5c in the "Implicit
	Rule Search Algorithm".  Fixes Savannah bug #17752.

	* main.c (clean_jobserver): Clear the jobserver_fds options and
	set job_slots to the default when we clean up.
	(define_makeflags): Return the new MAKEFLAGS value.
	(main): Reset MAKEFLAGS in the environment when we re-exec.
	Fixes Savannah bug #18124.

2009-06-08  Paul Smith  <psmith@gnu.org>

	* read.c (eval): Collapse continuations post-semicolon on target-
	specific variables.  Fixes Savannah bug #17521.

2009-06-07  Paul Smith  <psmith@gnu.org>

	* job.c (reap_children): For older systems without waitpid() (are
	there any of these left?) run wait(2) inside EINTRLOOP to handle
	EINTR errors.  Fixes Savannah bug #16401.

	* (various): Debug message cleanup.  Fixes Savannah bug #16469.

	* main.c: Fix bsd_signal() typedef.  Fixes Savannah bug #16473.

	* file.c (snap_deps): Set SNAPPED_DEPS at the start of snapping,